--- a/.github/workflows/netbuild.yml
+++ b/.github/workflows/netbuild.yml
@@ -9,7 +9,12 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repo
+      uses: actions/checkout@v2
+
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.0.1
+      
     - name: Build the solution
       run: .\build.ps1
       shell: powershell
