--- a/.github/workflows/netbuild.yml
+++ b/.github/workflows/netbuild.yml
@@ -1,8 +1,8 @@
 name: "Build .NET Framework application and release"
 
 on:
-  push:
-    branches: [ gh-actions-test ]
+  release:
+    types: [ created ]
 
 jobs:
   build:
@@ -14,7 +14,14 @@ jobs:
 
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.0.1
-      
-    - name: Build the solution
+
+    - name: Build solution
       run: .\build.ps1
       shell: powershell
+    
+    - name: Upload release
+      uses: skx/github-action-publish-binaries@release-1.3
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        args: "OpenVRDeviceBattery.zip"
